Chaning up information box functionality, fixing an overflow issue.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 /* PAGE LAYOUT */
 body, html {
+	width: 100%;
+	height: 100%;
+
 	padding: 0px;
 	margin: 0px;
 	
@@ -11,11 +14,14 @@ body, html {
 #wrapper {
 	position: absolute;
 	height: 100%;
+	overflow: hidden;
 }
 
 #bg {
-	display: block;
 	height: 100%;
+	margin: 0;
+	padding: 0;
+	width: auto;
 }
  
 a {
@@ -30,6 +36,9 @@ a:hover {
 .title {
 	opacity: 1;
 	position: fixed;
+
+	top: 8%;
+	display: inline;
 
 	font-size: 4em;
 	line-height: 1;
@@ -148,24 +157,22 @@ a:hover {
 	display: none;
 	
 	position: fixed;
-	right: 0;
 	top: 0;
-	left: 0;
-
+	left: 20%;
+	width: 60%;
+	
 	background: url(../images/overlay.png);
-	/*background: #000;*/
 	color: #fff;
-	padding: 10px 30px;
-}
-.more .info {
-	width: 80%;
-	/*display: none;*/
+	padding: 20px;
 }
 .more h2 {
-	margin: 0.5em 0em;
+	font-size: 2.3em;
+	margin: 0;
+	line-height: 1.5;
 }
 .more p {
-	margin: 1em 0em;
+	font-size: 1.1em;
+	margin: 0.5em 0 1em 0;
 	font-family: sans-serif;
 }
 .more .toggle.cross {
@@ -182,6 +189,7 @@ a:hover {
 }
 .more #content {
 	position: relative;
+	font-family: sans-serif;
 }
 .more .result {
 	display: inline-block;
